Add self-contained test API panel to dashboard and update dependencies